<resources>
    <string name="app_name">RecyclerViewApplication</string>
    <string name="load">Load Handler</string>
    <string name="load_async_task">Load AsyncTask</string>
    <string name="load_intent_serivce">Load IntentSerivice</string>
    <string name="load_start_job">Load with Job</string>
    <string name="loading">Loading</string>
    <string name="schedule">Schedule</string>
    <string name="loading_progress">Loading… (%s%%)</string>

    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>

    <string name="description">Description</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="ok">Ok</string>
    <string name="delete">Delete</string>
</resources>
