<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/loading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/load_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <ProgressBar
        android:id="@id/load_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/load_button_job_scheduler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loading_progress" />

    <Button
        android:id="@id/load_button_job_scheduler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_start_job"
        app:layout_constraintBottom_toTopOf="@+id/load_button_intent_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/load_progress" />

    <Button
        android:id="@id/load_button_intent_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_intent_serivce"
        app:layout_constraintBottom_toTopOf="@+id/load_button_async_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/load_button_job_scheduler" />

    <Button
        android:id="@id/load_button_async_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_async_task"
        app:layout_constraintBottom_toTopOf="@+id/load_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/load_progress" />

    <Button
        android:id="@id/load_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/load_button_async_task" />

</androidx.constraintlayout.widget.ConstraintLayout>